Bug 164141 - XLS with command button roundtripped as XLSX not opening in Excel
Summary: XLS with command button roundtripped as XLSX not opening in Excel
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:26.8.0 target:26...
Keywords: bibisected, bisected, filter:xlsx
Depends on:
Blocks: XLSX-Corrupted XLSX-Form-Controls
  Show dependency treegraph
 
Reported: 2024-12-03 10:40 UTC by Timur
Modified: 2025-12-12 10:24 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2024-12-03 10:40:35 UTC
This is a followup of bug 163842 where XLSX>XLSX was fixed so for XLS>XLSX.

Sample files can be opened in Excel in their current state.
Open them in LO, save them as XLSX, and try opening them in Excel.

=> Excel is unable to open the files, and shows error message:
Repaired Records: Drawing from /xl/drawings/drawing1.xml part (Drawing shape)
Repaired Records: Drawing from /xl/drawings/drawing2.xml part (Drawing shape)

Samples are attachment 197536 [details] and attachment 197537 [details].


Regressed from the following commit in 7.0:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=fd238380ae7820f12ac1f7c52d0f7180a93f3ba3
author		Serge Krot <Serge.Krot@cib.de>	2020-05-13 22:52:52 +0200
committer	Thorsten Behrens <Thorsten.Behrens@CIB.de>	2020-05-26 00:20:54 +0200
tdf#106181 XLSX export: output form controls
Comment 1 Roman Kuznetsov 2024-12-03 11:34:02 UTC
Confirm in

Version: 25.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 94afced0195ef824e575176e33c79ca57484cd5c
CPU threads: 8; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: threaded
Comment 2 Aron Budea 2024-12-10 04:20:10 UTC
(In reply to Timur from comment #0)
> This is a followup of bug 163842 where XLSX>XLSX was fixed so for XLS>XLSX.
To clarify, that turned out to be a different issue in the end.

> Regressed from the following commit in 7.0:
The fundamental issue / missing feature seems to be LO not supporting the export of form controls. Previously they got lost on save, and after the change the file gets corrupted. Even if this is still unsupported, would be good to at least return to the state where files didn't get corrupted.
Comment 3 Timur 2024-12-11 15:09:29 UTC
This is related or the same as bug 136397 but so far See Also is enough.
I prefer to have file shown as corrupted than to silently lose data.
Comment 4 Szymon Kłos 2025-01-22 11:56:04 UTC
(In reply to Timur from comment #3)
> This is related or the same as bug 136397 but so far See Also is enough.
> I prefer to have file shown as corrupted than to silently lose data.

Just idea for future: even better would be to warn user before/during saving.
So it will not be a suprise when opening the file again.
I don't know if we have similar workflow already in LO.
Comment 5 Commit Notification 2025-02-12 12:39:13 UTC
Gülşah Köse committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e7f05ee2e3c03350e13da607a3e48a822f8baf7e

tdf#164141 Fix command button xls to xlsx convert problem.

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Timur 2025-02-18 10:14:59 UTC
This was about "command button " and I close as Fixed. Color is bug 164924. Macro not working is out of the scope. 
Related tickets are in See also. Full sample is in bug 119046 , general case is bug 136397.
Regression is bug 165300.
Comment 7 Commit Notification 2025-12-08 06:06:28 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5c032407baf1952fab7a704b41b8ac8c18f978b0

Revert "tdf#164141 Fix command button xls to xlsx convert problem."

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-12-09 11:58:02 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/12a6b103fd6f199202b1a4a4e5a63c9ed7448e26

Revert "tdf#164141 Fix command button xls to xlsx convert problem."

It will be available in 26.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-12-12 10:24:12 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/9ec6929930527e8a4eb4d9b97e72cdbcf91d1ca0

Revert "tdf#164141 Fix command button xls to xlsx convert problem."

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.